<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/galleryItemCover"
        android:layout_width="match_parent"
        android:layout_height="@dimen/gallery_gallery_item_height"
        android:maxWidth="720dp"
        android:contentDescription="@string/gallery_menu_item_desc"
        android:scaleType="centerCrop" />

    <ImageView
        android:id="@+id/cover_shadow"
        android:layout_width="match_parent"
        android:layout_height="@dimen/shadow_height"
        android:layout_alignBottom="@+id/galleryItemCover"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/gallery_image_shadow_desc"
        android:background="@drawable/cover_shadow" />

    <TextView
        android:id="@+id/galleryItemName"
        style="@style/P1LargerTextLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/galleryItemCover"
        android:layout_alignParentLeft="true"
        android:text="@string/username_placeholder" />

</RelativeLayout>