<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:p1="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <!-- header  user info -->

    <LinearLayout
        android:id="@+id/ll_browse_fragment_list_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corner_top_small"
        android:clickable="true"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_browse_fragment_list_profile"
            android:layout_width="53dip"
            android:layout_height="53dip"
            android:layout_margin="7dp"
            android:background="@drawable/profile_shadow"
            android:contentDescription="@string/friends_list_pic_desc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="4dip"
            android:layout_marginTop="4dip"
            android:orientation="vertical" >

            <com.p1.mobile.p1android.ui.widget.P1TextView
                android:id="@+id/tv_browse_fragment_list_username"
                style="@style/P1MediumTextDark"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top"
                android:text="@string/browse_member_item_username"
                android:textSize="@dimen/browse_member_username_text_size"
                p1:typeface="helvetica_neue" />

            <com.p1.mobile.p1android.ui.widget.P1TextView
                android:id="@+id/tv_browse_fragment_list_position"
                style="@style/P1SmallTextDark"
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLength="40"
                android:text="@string/browse_member_item_career_position"
                android:textSize="@dimen/browse_member_other_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <com.p1.mobile.p1android.ui.widget.P1TextView
                    android:id="@+id/tv_browse_fragment_list_city"
                    style="@style/P1SmallTextDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:ellipsize="end"
                    android:gravity="bottom"
                    android:maxLength="30"
                    android:text="@string/browse_member_item_where"
                    android:textSize="@dimen/browse_member_other_text_size" />

                <ImageView
                    android:layout_width="7dip"
                    android:layout_height="7dip"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dip"
                    android:contentDescription="@string/contentDescription"
                    android:src="@drawable/browse_member_cell_clock" />

                <com.p1.mobile.p1android.ui.widget.P1TextView
                    android:id="@+id/tv_browse_fragment_list_time"
                    style="@style/P1SmallTextDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="4dip"
                    android:gravity="bottom"
                    android:text="@string/browse_member_item_time"
                    android:textSize="@dimen/browse_member_other_text_size" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- pictures -->

    <LinearLayout
        android:id="@+id/ll_browse_fragment_member_pictures_first_line"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/browse_member_user_picture_background"
        android:baselineAligned="true"
        android:orientation="horizontal" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_browse_fragment_member_pictures_second_line"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/browse_member_user_picture_background"
        android:baselineAligned="true"
        android:orientation="horizontal" >
    </LinearLayout>

</LinearLayout>