<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:p1="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_following"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:longClickable="false"
        android:visibility="invisible" />


    <RelativeLayout
        android:id="@+id/rl_following_list_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_selector_list_item"
        android:clickable="true"
        android:gravity="center_vertical"
        android:minHeight="64dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/follow_list_user_follower_iv"
            android:layout_width="54dip"
            android:layout_height="54dp"
            android:layout_margin="@dimen/following_item_padding"
            android:background="@drawable/profile_shadow"
            android:contentDescription="@string/friends_list_pic_desc" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/follow_list_user_follower_iv"
            android:orientation="vertical" >

            <com.p1.mobile.p1android.ui.widget.P1TextView
                android:id="@+id/follow_list_user_follower_tv"
                style="@style/P1MediumTextDark"
                android:layout_width="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/friendslist_item_padding"
                android:textColor="@color/follow_black2white"
                android:textIsSelectable="false"
                p1:typeface="helvetica_neue" />

            <!-- p1:typeface="helvetica_neue_medium" -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/following_headerview_text_margin"
                android:paddingLeft="@dimen/friendslist_item_padding"
                android:text="@string/following_headerview_tip_text2"
                android:textColor="@color/lightgrey2white"
                android:textSize="@dimen/following_headerview_tip_text_size" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/follow_list_item_divider"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:longClickable="false" />

    <com.p1.mobile.p1android.ui.widget.P1TextView
        android:id="@+id/tv_following_count_show"
        style="@style/P1SmallTextGray"
        android:layout_width="match_parent"
        android:background="@color/following_headerview_list_tip_background"
        android:gravity="left|center"
        android:paddingBottom="6dp"
        android:paddingLeft="@dimen/following_headerview_margin"
        android:paddingTop="6dp"
        android:shadowColor="@color/white"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/friends_following_action_bar_desc" />

</LinearLayout>